apps/heimdall/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimdall-service
  namespace: heimdall
spec:
  selector:
    app: heimdall
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
